@startuml
class OpenClosed {
    + {static} Main() : void
}
class Order {
    + Status : string <<get>> <<set>> = "Open"
    + AddOrderLine(itemQuantityPrice:ItemQuantityPrice) : void
    + TotalPrice() : decimal
}
abstract class PaymentProcessor {
    + {abstract} Pay(order:Order, securityCode:string) : void
}
class DebitPaymentProcessor {
    + <<override>> Pay(order:Order, securityCode:string) : void
}
class CreditPaymentProcessor {
    + <<override>> Pay(order:Order, securityCode:string) : void
}
class PaypalPaymentProcessor {
    + <<override>> Pay(order:Order, securityCode:string) : void
}
class ItemQuantityPrice <<record>> {
    + Product : string <<get>> <<init>>
    + Quantity : decimal <<get>> <<init>>
    + UnitPrice : decimal <<get>> <<init>>
}
class "List`1"<T> {
}
OpenClosed +-- Order
Order o-> "_orderlines<ItemQuantityPrice>" "List`1"
OpenClosed +-- PaymentProcessor
OpenClosed +-- DebitPaymentProcessor
PaymentProcessor <|-- DebitPaymentProcessor
OpenClosed +-- CreditPaymentProcessor
PaymentProcessor <|-- CreditPaymentProcessor
OpenClosed +-- PaypalPaymentProcessor
PaymentProcessor <|-- PaypalPaymentProcessor
Order +-- ItemQuantityPrice
@enduml
